<resources>
    <string name="global_txt_app_name" translatable="false">Covid Check</string>
    <string name="global_txt_email" translatable="false">Email</string>
    <string name="global_txt_username">Username</string>
    <string name="auth_txt_password">Password</string>
    <string name="register_txt_conf_password">Confirm password</string>
    <string name="register_btn_sign_up">Sign up</string>
    <string name="login_btn_sign_in">Sign in</string>
    <string name="register_txt_sign_in_redirect">Already a member? Sign in!</string>
    <string name="login_txt_forgot_password">Forgot password?</string>
    <string name="login_txt_sign_up_redirect">Don\'t have an account? Register here!</string>
    <string name="login_txt_sign_in">Sign in</string>
    <string name="reset_info_reset_pw_email">You will receive now an email with instructions on resetting password.</string>
    <string name="reset_btn_reset_pw">Reset password</string>
    <string name="reset_txt_go_back">Go back to Sign In.</string>
    <string name="reset_desc_reset_pw">Password reset</string>
    <string name="main_txt_your_recent_locations">Your recent locations:</string>
    <string name="main_txt_show_statistics">Show statistics</string>
    <string name="main_txt_add_location">Add location</string>
    <string name="layout_desc_bottom_wave">Bottom wave text</string>
    <string name="layout_desc_person_profile">Person profile text</string>
    <string name="layout_desc_top_wave">Top wave text</string>
    <string name="layout_desc_location_icon" translatable="false">location_icon</string>
    <string name="layout_desc_statistics_icon" translatable="false">statistics_icon</string>
    <string name="main_txt_infection_status">Infection status</string>
    <string name="global_desc_logo" translatable="false">logo</string>
    <string name="stats_desc_go_back">Go back to main activity</string>
    <string name="login_err_invalid_cred">Invalid email or password!</string>
    <string name="register_txt_join_us">Join us!</string>
    <string name="reset_txt_reset_pw">Password reset!</string>
    <string name="login_err_unverified_email">Email is not verified!</string>
    <string name="login_err_required">Required!</string>
    <string name="login_err_invalid_email">Invalid email!</string>
    <string name="global_err_sth_wrong">Something went wrong!</string>
    <string name="global_err_location_null">The location has not been established yet!</string>
    <string name="global_err_location_not_readed">The location could not be read!</string>
    <string name="register_info_email_verification">Email verification was sent!</string>
    <string name="register_err_password_same">Password must be the same!</string>
    <string name="reset_info_email_with_reset">Email with reset password was sent!</string>
    <string name="main_txt_auto_loc">Automatic location</string>
    <string name="global_txt_yes">Yes</string>
    <string name="global_txt_no">No</string>
    <string name="main_txt_added_loc">Added your location!</string>
    <string name="main_txt_logout">Log out</string>
    <string name="main_info_ask_logout">Are you sure you want to log out?</string>
    <string name="main_txt_stay">Stay with us</string>
    <string name="main_txt_your_acc">Your account</string>
    <string name="global_txt_ok">OK</string>
    <string name="main_info_share_your_loc">Do you want to share your current location?</string>
    <string name="main_info_reject">No, I\'ll indicate it myself</string>
    <string name="global_info_ask_rational">Do you want to do that?</string>
    <string name="global_info_ask_gps">Do you want to enable GPS?</string>
    <string name="global_err_no_int_conn">No Internet connection!</string>
    <string name="map_info_bad_time">The selected time is incorrect!</string>
    <string name="main_txt_infected">Infected</string>
    <string name="main_txt_healthy">Healthy</string>
    <string name="main_txt_in_danger">You are in danger!</string>
    <string name="main_txt_danger">Danger!</string>
    <string name="main_txt_contact_detected">We detected your possible contact with infected person!</string>
    <string name="main_txt_confirm">I understood</string>
</resources>
