<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients">

    <ImageView
        android:id="@+id/wave_top_img"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/layout_desc_top_wave"
        android:scaleType="fitStart"
        android:src="@drawable/ic_wave2" />

    <TableRow
        android:id="@+id/profile_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/nickname_home_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/person_profile_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/layout_desc_person_profile"
            android:onClick="showAccountDialog"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:tint="@color/white" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_lay_buttons_bottom"
        android:layout_below="@id/profile_row"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_txt_your_recent_locations"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/recent_locations_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:scrollbarSize="3dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/wave_bottom_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-128dp"
        android:contentDescription="@string/layout_desc_bottom_wave"
        android:src="@drawable/ic_wave1" />

    <LinearLayout
        android:id="@+id/linear_lay_buttons_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/mine_shaft"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/location_img"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/layout_desc_location_icon"
                    android:onClick="showLocationDialog"
                    app:srcCompat="@drawable/location" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/add_location_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showLocationDialog"
                    android:text="@string/main_txt_add_location"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cod_gray"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/main_txt_healthy"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/infection_switch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:switchMinWidth="45dp"
                app:thumbTint="@color/chestnut_rose"
                app:trackTint="@drawable/checker_track"
                app:useMaterialThemeColors="false" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/main_txt_infected"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
