<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="140dp"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    </LinearLayout>

    <ImageView
        android:id="@+id/wave_bottom_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-130dp"
        android:contentDescription="@string/layout_desc_bottom_wave"
        android:src="@drawable/ic_wave1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/mine_shaft"
        android:gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/date_picker_img"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:contentDescription="@string/layout_desc_location_icon"
                android:onClick="showDateDialog"
                app:srcCompat="@drawable/calendar" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/time_picker_img"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:contentDescription="@string/layout_desc_statistics_icon"
                android:onClick="showTimeDialog"
                android:src="@drawable/timer" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/add_manual_location_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/layout_desc_statistics_icon"
                android:onClick="addLocation"
                android:src="@drawable/location" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/date_picker_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showDateDialog"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/time_picker_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showTimeDialog"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/add_manual_location_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showTimeDialog"
                android:text="@string/main_txt_add_location"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>
</RelativeLayout>